# CLI_Render

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_win.sh  drawSquare.c  drawSquareDoubles.c
.github/workflows/: build-linux.yml  build.yml
data/: inputData.json  renderOptions.json
lib/: CMakeLists.txt  draw-matrix.c  draw.c  draw.h  drawSquareDoubles.c  quick_sort.c  quick_sort.h
runner/: CMakeLists.txt  runner.c  runner.h
runner2/: CMakeLists.txt  runner2.c
src/: CMakeLists.txt
tests/: CMakeLists.txt  tests.c
thirdparty-cJSON/: CMakeLists.txt  cJson-w.h
